fix z-index sa mere

--- a/apps/front/src/styles/pages/Ranking.module.scss
+++ b/apps/front/src/styles/pages/Ranking.module.scss
@@ -12,7 +12,7 @@
 	padding: 20px;
 	background-color: $color_widget;
 
-	z-index: 1000;
+	z-index: 100;
 	position: absolute;
 	top: 50%;
 	left: 50%;
